modules/network/vpc.tf
resource "aws_vpc" "itachi_vpc" {
    cidr_block = var.cidr_block_vpc
    instance_tenancy = "default"
    tags = {
        Name = "itachi_vpc"
    }
}
